--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
     implementation "com.android.support:design:$supportLibVersion"
     implementation "android.arch.paging:runtime:1.0.0-alpha4-1"
+    implementation "com.google.android.gms:play-services-maps:11.8.0"
 
     implementation 'com.google.code.gson:gson:2.8.2'
 
